# defmt-persist-print

./: Cargo.toml  README.md
src/: cli.rs  elf.rs  main.rs  storage.rs
