[package]
authors = ["Eugene <eupn@protonmail.com>"]
categories = ["command-line-utilities", "embedded", "no-std"]
description = "Runs embedded programs just like native ones"
edition = "2018"
keywords = ["defmt"]
license = "MIT OR Apache-2.0"
name = "defmt-print"
readme = "README.md"
repository = "https://github.com/eupn/defmt-print"
version = "0.1.0"

[dependencies]
addr2line = "0.14.1"
ansi_term = "0.12.1"
anyhow = "1.0.40"
colored = "2.0.0"
defmt-decoder = { version = "=0.2.1", features = ['unstable'] }
difference = "2.0.0"
gimli = "0.23.0"
git-version = "0.3.4"
hidapi = "1.2.6"
log = "0.4.14"
# an addr2line trait is implement for a type in this particular version
object = "0.22.0"
probe-rs = "0.10.1"
rustc-demangle = "0.1.19"
structopt = "0.3.21"
embedded-storage = { git = "https://github.com/rust-embedded-community/embedded-storage" }
cobs = "0.1.4"

[dependencies.defmt-persist]
#git = "https://github.com/eupn/defmt-persist.git"
#branch = "chore/update-defmt"
features = ["rtt"]
path = "../defmt-persist"

[dev-dependencies]
insta = "1.7"
os_pipe = "0.9.2"
pretty_assertions = "0.7.2"
rstest = "0.10.0"
